--- a/style.css
+++ b/style.css
@@ -1,24 +1,48 @@
 /* :root {
+    --pargraf-color: blue;
+    --Title-subtit-color: darkblue;
+    --Font: Lato;
 
 } */
 
 
 
 body {
-    background-color: rgb(185, 39, 39);
+    background-color: rgb(222, 192, 160);
 }
 
-header {
-    background-color: blue;
-}
-
-/* .header.menu.balk {
+.header-main {
     width: 100%;
-    height: 120px;
-    background-color: black;
-} */
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(14, 46, 175);
+}
 
-p {
+.header-main-logo {
+    width: fit-content;
+    height: 100%;
+    background-color: pink;
+    display: flex;
+}
+
+.header-main-logo img {
+    height: 30px;
+}
+
+.header-main-nav {
+    width: 120px;
+    height: 100%;
+    background-color: aquamarine;
+}
+
+.header-main-SignUp {
+    width: 120px;
+    height: 100%;
+    background-color: yellow;
+}
+
+h1 {
     background-color: brown;
     text-align: center;
     font-size: large;
